Fixed spacing issue for brands menu in mobile

--- a/app/design/frontend/Emthemes/everything/beauty/web/css/source/_customstyles.less
+++ b/app/design/frontend/Emthemes/everything/beauty/web/css/source/_customstyles.less
@@ -1035,3 +1035,18 @@ width: 14px;
 	}
 }
 
+@media (max-width: 767px) {
+	.nav-brands .submenu.dropdown-menu.animated {
+		padding:20px 0 0 0;
+	}
+	.nav-mobile .nav-brands .dropdown-menu .megamenu-header {
+		width: 90% !important;
+		margin: 0 auto;
+		float: none;
+		padding-bottom: 0;
+	}
+	.nav-mobile .nav-item > a {
+		line-height: 25px;
+	}
+}
+
